I added the src for the images

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <body>
   <nav>
+    <figure>
+      <img src="./images/logo.svg" alt="Easybank Logo">
+    </figure>
     <ul>
       <li>Home</li>
       <li>About</li>
@@ -113,7 +116,28 @@
     </div>
   </article>
   <footer>
-    <div></div>
+    <div>
+      <figure>
+        <img src="./images/logo.svg" alt="Easybank Logo">
+      </figure>
+      <div>
+        <figure>
+          <img src="./images/icon-facebook.svg" alt="Facebook Logo">
+        </figure>
+        <figure>
+          <img src="./images/icon-youtube.svg" alt="Youtube Logo">
+        </figure>
+        <figure>
+          <img src="./images/icon-twitter.svg" alt="Twitter Logo">
+        </figure>
+        <figure>
+          <img src="./images/icon-pinterest.svg" alt="Pinterest Logo">
+        </figure>
+        <figure>
+          <img src="./images/icon-instagram.svg" alt="Instagram Logo">
+        </figure>
+      </div>
+    </div>
     <ul>
       <li>About Us</li>
       <li>Contact</li>
