--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <figure>
       <img src="./images/logo.svg" alt="Easybank Logo">
     </figure>
+    <figure id="hamburger">
+      <img src="./images/icon-hamburger.svg" alt="Hamburger Menu">
+    </figure>
     <ul>
       <li>Home</li>
       <li>About</li>
@@ -34,6 +37,13 @@
     <figure>
       <img src="./images/image-mockups.png" alt="Easybank Mockups">
     </figure>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Contact</li>
+      <li>Blog</li>
+      <li>Careers</li>
+    </ul>
   </main>
   <section>
     <div>
@@ -42,7 +52,7 @@
         your finances like never before.</p>
     </div>
     <div>
-      <div>
+      <div class="cont1">
         <figure>
           <img src="./images/icon-online.svg" alt="Online Banking">
         </figure>
@@ -50,7 +60,7 @@
         <p>Our modern web and mobile applications allow you to keep track of your finances
           wherever you are in the world.</p>
       </div>
-      <div>
+      <div class="cont1">
         <figure>
           <img src="./images/icon-budgeting.svg" alt="Simple Budgeting">
         </figure>
@@ -58,7 +68,7 @@
         <p>See exactly where your money goes each month. Receive notifications when you’re
           close to hitting your limits.</p>
       </div>
-      <div>
+      <div class="cont1">
         <figure>
           <img src="./images/icon-onboarding.svg" alt="Fast Onboarding">
         </figure>
@@ -66,7 +76,7 @@
         <p>We don’t do branches. Open your account in minutes online and start taking control
           of your finances right away.</p>
       </div>
-      <div>
+      <div class="cont1">
         <figure>
           <img src="./images/icon-api.svg" alt="Open API">
         </figure>
