--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <footer>
     <div>
       <figure>
-        <img src="./images/logo.svg" alt="Easybank Logo">
+        <img src="./images/footerlogo.svg" alt="Easybank Logo">
       </figure>
       <div>
         <figure>
@@ -163,8 +163,8 @@
       <p>© Easybank. All Rights Reserved</p>
     </div>
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>.
+    Coded by <a href="https://github.com/Aik-202/interactive-card-detail-form.git"> Assurance Chioma Ikogwe</a>.
     </div>
   </footer>
 </body>
