I made the page responsive for 912px, 1024px breakpoints

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <p>We leverage Open Banking to turn your bank account into your financial hub. Control
         your finances like never before.</p>
     </div>
-    <div>
+    <div class="container">
       <div class="cont1">
         <figure>
           <img src="./images/icon-online.svg" alt="Online Banking">
@@ -89,40 +89,42 @@
   <article>
     <h2>Latest Articles</h2>
     <div>
-      <figure>
-        <img src="./images/image-currency.jpg" alt="Receive money in any currency with no fees">
-        <figcaption>By Claire Robinson</figcaption>
-      </figure>
-      <h4>Receive money in any currency with no fees</h4>
-      <p>The world is getting smaller and we’re becoming more mobile. So why should you be
-        forced to only receive money in a single …</p>
-    </div>
-    <div>
-      <figure>
-        <img src="./images/image-restaurant.jpg" alt="Treat yourself without worrying about money">
-        <figcaption>By Wilson Hutton</figcaption>
-      </figure>
-      <h4>Treat yourself without worrying about money</h4>
-      <p>Our simple budgeting feature allows you to separate out your spending and set
-        realistic limits each month. That means you …</p>
-    </div>
-    <div>
-      <figure>
-        <img src="./images/image-plane.jpg" alt="Take your Easybank card wherever you go">
-        <figcaption>By Wilson Hutton</figcaption>
-      </figure>
-      <h4>Take your Easybank card wherever you go</h4>
-      <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases
-        while you’re abroad. We’ll even show you …</p>
-    </div>
-    <div>
-      <figure>
-        <img src="./images/image-confetti.jpg" alt="Our invite-only Beta accounts are now live">
-        <figcaption>By Claire Robinson</figcaption>
-      </figure>
-      <h4>Our invite-only Beta accounts are now live!</h4>
-      <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta.
-        It’s easy to request an invite through the site ...</p>
+      <div>
+        <figure id="currency">
+          <img src="./images/image-currency.jpg" alt="Receive money in any currency with no fees">
+          <figcaption>By Claire Robinson</figcaption>
+        </figure>
+        <h4>Receive money in any currency with no fees</h4>
+        <p>The world is getting smaller and we’re becoming more mobile. So why should you be
+          forced to only receive money in a single …</p>
+      </div>
+      <div>
+        <figure>
+          <img src="./images/image-restaurant.jpg" alt="Treat yourself without worrying about money">
+          <figcaption>By Wilson Hutton</figcaption>
+        </figure>
+        <h4>Treat yourself without worrying about money</h4>
+        <p>Our simple budgeting feature allows you to separate out your spending and set
+          realistic limits each month. That means you …</p>
+      </div>
+      <div>
+        <figure>
+          <img src="./images/image-plane.jpg" alt="Take your Easybank card wherever you go">
+          <figcaption>By Wilson Hutton</figcaption>
+        </figure>
+        <h4>Take your Easybank card wherever you go</h4>
+        <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases
+          while you’re abroad. We’ll even show you …</p>
+      </div>
+      <div>
+        <figure>
+          <img src="./images/image-confetti.jpg" alt="Our invite-only Beta accounts are now live">
+          <figcaption>By Claire Robinson</figcaption>
+        </figure>
+        <h4>Our invite-only Beta accounts are now live!</h4>
+        <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta.
+          It’s easy to request an invite through the site ...</p>
+      </div>
     </div>
   </article>
   <footer>
@@ -162,11 +164,11 @@
       <button>Request Invite</button>
       <p>© Easybank. All Rights Reserved</p>
     </div>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>.
-    Coded by <a href="https://github.com/Aik-202/interactive-card-detail-form.git"> Assurance Chioma Ikogwe</a>.
-    </div>
   </footer>
+  <aside class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>.
+  Coded by <a href="https://github.com/Aik-202/interactive-card-detail-form.git"> Assurance Chioma Ikogwe</a>.
+  </aside>
 </body>
 
 </html>
