--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
   <nav>
     <figure>
-      <img src="./images/logo.svg" alt="Easybank Logo">
+      <img src="./images/logo.svg" alt="Easybank Logo" draggable="false">
     </figure>
     <figure id="hamburger">
-      <img src="./images/icon-hamburger.svg" alt="Hamburger Menu">
+      <img src="./images/icon-hamburger.svg" alt="Hamburger Menu" draggable="false">
     </figure>
     <ul>
       <li>Home</li>
@@ -35,7 +35,7 @@
       <button>Request Invite</button>
     </div>
     <figure>
-      <img src="./images/image-mockups.png" alt="Easybank Mockups">
+      <img src="./images/image-mockups.png" alt="Easybank Mockups" draggable="false">
     </figure>
     <ul>
       <li>Home</li>
@@ -54,7 +54,7 @@
     <div class="container">
       <div class="cont1">
         <figure>
-          <img src="./images/icon-online.svg" alt="Online Banking">
+          <img src="./images/icon-online.svg" alt="Online Banking" draggable="false">
         </figure>
         <h4>Online Banking</h4>
         <p>Our modern web and mobile applications allow you to keep track of your finances
@@ -62,7 +62,7 @@
       </div>
       <div class="cont1">
         <figure>
-          <img src="./images/icon-budgeting.svg" alt="Simple Budgeting">
+          <img src="./images/icon-budgeting.svg" alt="Simple Budgeting" draggable="false">
         </figure>
         <h4>Simple Budgeting</h4>
         <p>See exactly where your money goes each month. Receive notifications when you’re
@@ -70,7 +70,7 @@
       </div>
       <div class="cont1">
         <figure>
-          <img src="./images/icon-onboarding.svg" alt="Fast Onboarding">
+          <img src="./images/icon-onboarding.svg" alt="Fast Onboarding" draggable="false">
         </figure>
         <h4> Fast Onboarding</h4>
         <p>We don’t do branches. Open your account in minutes online and start taking control
@@ -78,7 +78,7 @@
       </div>
       <div class="cont1">
         <figure>
-          <img src="./images/icon-api.svg" alt="Open API">
+          <img src="./images/icon-api.svg" alt="Open API" draggable="false">
         </figure>
         <h4>Open API</h4>
         <p>Manage your savings, investments, pension, and much more from one account. Tracking
@@ -91,7 +91,7 @@
     <div>
       <div>
         <figure id="currency">
-          <img src="./images/image-currency.jpg" alt="Receive money in any currency with no fees">
+          <img src="./images/image-currency.jpg" alt="Receive money in any currency with no fees" draggable="false">
           <figcaption>By Claire Robinson</figcaption>
         </figure>
         <h4>Receive money in any currency with no fees</h4>
@@ -100,7 +100,7 @@
       </div>
       <div>
         <figure>
-          <img src="./images/image-restaurant.jpg" alt="Treat yourself without worrying about money">
+          <img src="./images/image-restaurant.jpg" alt="Treat yourself without worrying about money" draggable="false">
           <figcaption>By Wilson Hutton</figcaption>
         </figure>
         <h4>Treat yourself without worrying about money</h4>
@@ -109,7 +109,7 @@
       </div>
       <div>
         <figure>
-          <img src="./images/image-plane.jpg" alt="Take your Easybank card wherever you go">
+          <img src="./images/image-plane.jpg" alt="Take your Easybank card wherever you go" draggable="false">
           <figcaption>By Wilson Hutton</figcaption>
         </figure>
         <h4>Take your Easybank card wherever you go</h4>
@@ -118,7 +118,7 @@
       </div>
       <div>
         <figure>
-          <img src="./images/image-confetti.jpg" alt="Our invite-only Beta accounts are now live">
+          <img src="./images/image-confetti.jpg" alt="Our invite-only Beta accounts are now live" draggable="false">
           <figcaption>By Claire Robinson</figcaption>
         </figure>
         <h4>Our invite-only Beta accounts are now live!</h4>
@@ -130,23 +130,23 @@
   <footer>
     <div>
       <figure>
-        <img src="./images/footerlogo.svg" alt="Easybank Logo">
+        <img src="./images/footerlogo.svg" alt="Easybank Logo" draggable="false">
       </figure>
       <div>
         <figure>
-          <img src="./images/icon-facebook.svg" alt="Facebook Logo">
+          <img src="./images/icon-facebook.svg" alt="Facebook Logo" draggable="false">
         </figure>
         <figure>
-          <img src="./images/icon-youtube.svg" alt="Youtube Logo">
+          <img src="./images/icon-youtube.svg" alt="Youtube Logo" draggable="false">
         </figure>
         <figure>
-          <img src="./images/icon-twitter.svg" alt="Twitter Logo">
+          <img src="./images/icon-twitter.svg" alt="Twitter Logo" draggable="false">
         </figure>
         <figure>
-          <img src="./images/icon-pinterest.svg" alt="Pinterest Logo">
+          <img src="./images/icon-pinterest.svg" alt="Pinterest Logo" draggable="false">
         </figure>
         <figure>
-          <img src="./images/icon-instagram.svg" alt="Instagram Logo">
+          <img src="./images/icon-instagram.svg" alt="Instagram Logo" draggable="false">
         </figure>
       </div>
     </div>
