I finished the code for the hamburger menu, I am still styling it though

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
       </li>
     </ul>
     <button>Request Invite</button>
+    <ul id="hamburger_list">
+      <li>Home</li>
+      <li>About</li>
+      <li>Contact</li>
+      <li>Blog</li>
+      <li>Careers</li>
+    </ul>
   </nav>
   <main>
     <div>
@@ -47,15 +54,8 @@
       <button>Request Invite</button>
     </div>
     <figure>
-      <img src="./images/image-mockups.png" alt="Easybank Mockups" draggable="false">
+      <img src="./images/image-mockups.png" alt="Easybank Mockups" draggable="false" id="mockups">
     </figure>
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Contact</li>
-      <li>Blog</li>
-      <li>Careers</li>
-    </ul>
   </main>
   <section>
     <div>
