I am adding links to all the active state elements

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Assurance Ikogwe | Easybank landing page</title>
   <link rel="stylesheet" href="./styles/aikstyles.css">
@@ -21,19 +20,19 @@
       <img src="./images/icon-hamburger.svg" alt="Hamburger Menu" id="hamburger_icon" draggable="false">
     </figure>
     <ul>
-      <li class="nav_list">Home
+      <li class="nav_list"><a href="#" rel="noopener" rel="noreferrer">Home</a>
         <span class="border bder1"></span>
       </li>
-      <li class="nav_list">About
+      <li class="nav_list"><a href="#" rel="noopener" rel="noreferrer">About</a>
         <span class="border bder2"></span>
       </li>
-      <li class="nav_list">Contact
+      <li class="nav_list"><a href="#" rel="noopener" rel="noreferrer">Contact</a>
         <span class="border bder3"></span>
       </li>
-      <li class="nav_list">Blog
+      <li class="nav_list"><a href="#" rel="noopener" rel="noreferrer">Blog</a>
         <span class="border bder4"></span>
       </li>
-      <li class="nav_list">Careers
+      <li class="nav_list"><a href="#" rel="noopener" rel="noreferrer">Careers</a>
         <span class="border bder5"></span>
       </li>
     </ul>
