I made some adjustments and added a preloader

--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Assurance Ikogwe | Easybank landing page</title>
   <link rel="stylesheet" href="./styles/aikstyles.css">
-  <!-- <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9IH13rlL9zGqvLdePA=" crossorigin="anonymous"></script> -->
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
   <script src="./src/aikscripts.js" defer></script>
 </head>
 
 <body>
+  <aside id="preloader">
+    <figure>
+      <img src="./images/logo.svg" alt="Easybank Logo" draggable="false">
+    </figure>
+    <div id="bubble"><span></span><span></span><span></span></div>
+  </aside>
   <nav>
     <figure>
       <img src="./images/logo.svg" alt="Easybank Logo" draggable="false">
