I am done with the preloader, time to test it

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="./src/aikscripts.js" defer></script>
 </head>
 
-<body>
+<body onload="preloader()">
   <aside id="preloader">
     <figure>
       <img src="./images/logo.svg" alt="Easybank Logo" draggable="false">
