I changed the preloader bubble color

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Assurance Ikogwe | Easybank landing page</title>
   <link rel="stylesheet" href="./styles/aikstyles.css">
-  <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
   <script src="./src/aikscripts.js" defer></script>
 </head>
 
 <body onload="preloader()">
+
   <nav>
     <figure>
       <img src="./images/logo.svg" alt="Easybank Logo" draggable="false">
@@ -45,6 +47,7 @@
       <li><a href="#" rel="noopener" rel="noreferrer">Careers</a><span class="ham_border ham_bder4"></span></li>
     </ul>
   </nav>
+
   <main>
     <div>
       <h1><a href="#" rel="noopener" rel="noreferrer">Next generation digital banking</a></h1>
@@ -56,6 +59,7 @@
       <img src="./images/image-mockups.png" alt="Easybank Mockups" draggable="false" id="mockups">
     </figure>
   </main>
+
   <section>
     <div>
       <h2><a href="#" rel="noopener" rel="noreferrer">Why choose Easybank?</a></h2>
@@ -97,6 +101,7 @@
       </div>
     </div>
   </section>
+
   <article>
     <h2><a href="#" rel="noopener" rel="noreferrer">Latest Articles</a></h2>
     <div>
@@ -138,6 +143,7 @@
       </div>
     </div>
   </article>
+
   <footer>
     <div>
       <figure>
@@ -181,6 +187,7 @@
       <p>© Easybank. All Rights Reserved</p>
     </div>
   </footer>
+
   <aside class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>.
     Coded by <a href="https://github.com/Aik-202/aik-easybank-landing-page.git"> Assurance Chioma Ikogwe</a>.
@@ -192,7 +199,6 @@
     </figure>
     <div id="bubble"><span></span><span></span><span></span></div>
   </aside>
-  
-</body>
 
+</body>
 </html>
