--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </div>
       <div>
         <figure>
-          <img src="./images/image-restaurant.jpg" alt="Treat yourself without worrying about money" draggable="false">
+          <img src="./images/image-restaurant.jpg" height="167px" alt="Treat yourself without worrying about money" draggable="false">
           <figcaption>By Wilson Hutton</figcaption>
         </figure>
         <h4><a href="#" rel="noopener" rel="noreferrer">Treat yourself without worrying about money</a></h4>
@@ -125,7 +125,7 @@
       </div>
       <div>
         <figure>
-          <img src="./images/image-plane.jpg" alt="Take your Easybank card wherever you go" draggable="false">
+          <img src="./images/image-plane.jpg" height="167px" alt="Take your Easybank card wherever you go" draggable="false">
           <figcaption>By Wilson Hutton</figcaption>
         </figure>
         <h4><a href="#" rel="noopener" rel="noreferrer">Take your Easybank card wherever you go</a></h4>
@@ -134,7 +134,7 @@
       </div>
       <div>
         <figure>
-          <img src="./images/image-confetti.jpg" alt="Our invite-only Beta accounts are now live" draggable="false">
+          <img src="./images/image-confetti.jpg" height="167px" alt="Our invite-only Beta accounts are now live" draggable="false">
           <figcaption>By Claire Robinson</figcaption>
         </figure>
         <h4><a href="#" rel="noopener" rel="noreferrer">Our invite-only Beta accounts are now live!</a></h4>
