Changed h4 to h2 and added roles to my div

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </nav>
 
   <main>
-    <div>
+    <div role="main">
       <h1><a href="#" rel="noopener" rel="noreferrer">Next generation digital banking</a></h1>
       <p>Take your financial life online. Your Easybank account will be a one-stop-shop
         for spending, saving, budgeting, investing, and much more.</p>
@@ -60,41 +60,41 @@
   </main>
 
   <section>
-    <div>
+    <div role="section">
       <h2><a href="#" rel="noopener" rel="noreferrer">Why choose Easybank?</a></h2>
       <p>We leverage Open Banking to turn your bank account into your financial hub. Control
         your finances like never before.</p>
     </div>
-    <div class="container">
-      <div class="cont1">
+    <div class="container" role="section">
+      <div class="cont1" role="section">
         <figure>
           <img src="./images/icon-online.svg" alt="Online Banking" draggable="false">
         </figure>
-        <h4><a href="#" rel="noopener" rel="noreferrer">Online Banking</a></h4>
+        <h2><a href="#" rel="noopener" rel="noreferrer">Online Banking</a></h2>
         <p>Our modern web and mobile applications allow you to keep track of your finances
           wherever you are in the world.</p>
       </div>
-      <div class="cont1">
+      <div class="cont1" role="section">
         <figure>
           <img src="./images/icon-budgeting.svg" alt="Simple Budgeting" draggable="false">
         </figure>
-        <h4><a href="#" rel="noopener" rel="noreferrer">Simple Budgeting</a></h4>
+        <h2><a href="#" rel="noopener" rel="noreferrer">Simple Budgeting</a></h2>
         <p>See exactly where your money goes each month. Receive notifications when you’re
           close to hitting your limits.</p>
       </div>
-      <div class="cont1">
+      <div class="cont1" role="section">
         <figure>
           <img src="./images/icon-onboarding.svg" alt="Fast Onboarding" draggable="false">
         </figure>
-        <h4><a href="#" rel="noopener" rel="noreferrer">Fast Onboarding</a></h4>
+        <h2><a href="#" rel="noopener" rel="noreferrer">Fast Onboarding</a></h2>
         <p>We don’t do branches. Open your account in minutes online and start taking control
           of your finances right away.</p>
       </div>
-      <div class="cont1">
+      <div class="cont1" role="section">
         <figure>
           <img src="./images/icon-api.svg" alt="Open API" draggable="false">
         </figure>
-        <h4><a href="#" rel="noopener" rel="noreferrer">Open API</a></h4>
+        <h2><a href="#" rel="noopener" rel="noreferrer">Open API</a></h2>
         <p>Manage your savings, investments, pension, and much more from one account. Tracking
           your money has never been easier.</p>
       </div>
@@ -103,40 +103,40 @@
 
   <article>
     <h2><a href="#" rel="noopener" rel="noreferrer">Latest Articles</a></h2>
-    <div>
-      <div>
+    <div role="article">
+      <div role="article">
         <figure id="currency">
           <img src="./images/image-currency.jpg" alt="Receive money in any currency with no fees" draggable="false">
           <figcaption>By Claire Robinson</figcaption>
         </figure>
-        <h4><a href="#" rel="noopener" rel="noreferrer">Receive money in any currency with no fees</a></h4>
+        <h2><a href="#" rel="noopener" rel="noreferrer">Receive money in any currency with no fees</a></h2>
         <p>The world is getting smaller and we’re becoming more mobile. So why should you be
           forced to only receive money in a single …</p>
       </div>
-      <div>
+      <div role="article">
         <figure>
           <img src="./images/image-restaurant.jpg"  alt="Treat yourself without worrying about money" draggable="false">
           <figcaption>By Wilson Hutton</figcaption>
         </figure>
-        <h4><a href="#" rel="noopener" rel="noreferrer">Treat yourself without worrying about money</a></h4>
+        <h2><a href="#" rel="noopener" rel="noreferrer">Treat yourself without worrying about money</a></h2>
         <p>Our simple budgeting feature allows you to separate out your spending and set
           realistic limits each month. That means you …</p>
       </div>
-      <div>
+      <div role="article">
         <figure>
           <img src="./images/image-plane.jpg"  alt="Take your Easybank card wherever you go" draggable="false">
           <figcaption>By Wilson Hutton</figcaption>
         </figure>
-        <h4><a href="#" rel="noopener" rel="noreferrer">Take your Easybank card wherever you go</a></h4>
+        <h2><a href="#" rel="noopener" rel="noreferrer">Take your Easybank card wherever you go</a></h2>
         <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases
           while you’re abroad. We’ll even show you …</p>
       </div>
-      <div>
+      <div role="article">
         <figure>
           <img src="./images/image-confetti.jpg" alt="Our invite-only Beta accounts are now live" draggable="false">
           <figcaption>By Claire Robinson</figcaption>
         </figure>
-        <h4><a href="#" rel="noopener" rel="noreferrer">Our invite-only Beta accounts are now live!</a></h4>
+        <h2><a href="#" rel="noopener" rel="noreferrer">Our invite-only Beta accounts are now live!</a></h2>
         <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta.
           It’s easy to request an invite through the site ...</p>
       </div>
@@ -144,11 +144,11 @@
   </article>
 
   <footer>
-    <div>
+    <div role="footer">
       <figure>
         <img src="./images/footerlogo.svg" alt="Easybank Logo" draggable="false">
       </figure>
-      <div>
+      <div role="footer">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
           <path fill="#FFF"
             d="M18.896 0H1.104C.494 0 0 .494 0 1.104v17.793C0 19.506.494 20 1.104 20h9.58v-7.745H8.076V9.237h2.606V7.01c0-2.583 1.578-3.99 3.883-3.99 1.104 0 2.052.082 2.329.119v2.7h-1.598c-1.254 0-1.496.597-1.496 1.47v1.928h2.989l-.39 3.018h-2.6V20h5.098c.608 0 1.102-.494 1.102-1.104V1.104C20 .494 19.506 0 18.896 0z" />
@@ -181,7 +181,7 @@
       <li><a href="#" rel="noopener" rel="noreferrer">Support</a></li>
       <li><a href="#" rel="noopener" rel="noreferrer">Privacy Policy</a></li>
     </ul>
-    <div>
+    <div role="footer">
       <button>Request Invite</button>
       <p>© Easybank. All Rights Reserved</p>
     </div>
