Made some corrections

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </main>
 
   <section>
-    <div role="generic">
+    <div role="group">
       <h2><a href="#" rel="noopener" rel="noreferrer">Why choose Easybank?</a></h2>
       <p>We leverage Open Banking to turn your bank account into your financial hub. Control
         your finances like never before.</p>
@@ -103,7 +103,7 @@
 
   <article>
     <h2><a href="#" rel="noopener" rel="noreferrer">Latest Articles</a></h2>
-    <div role="generic">
+    <div role="group">
       <div>
         <figure id="currency">
           <img src="./images/image-currency.jpg" alt="Receive money in any currency with no fees" draggable="false">
